# inference-engine-arena

./: .env.example  .gitignore  README.md  WRAPPER_README.md  main.py  pyproject.toml  requirements.txt
dashboard/: app.py
docs/: benchmarks.mdx  dashboard.mdx  engines.mdx  introduction.mdx  leaderboard.mdx  mint.json  quickstart.mdx  roadmap.mdx  troubleshoot.mdx
example_maas_api_provider/: fireworks_completions_example.py
example_results/run-20250507-213430-b13cac1d/: run-20250507-213430-b13cac1d.json
example_results/run-20250508-095019-9e2c125c/: run-20250508-095019-9e2c125c.json
example_results/run-20250508-225607-65868d84/: run-20250508-225607-65868d84.json
example_yaml/: Meta-Llama-3.1-8B-sglang-mutiplegpu.yaml  Meta-Llama-3.1-8B-sglang-singlegpu.yaml  Meta-Llama-3.1-8B-varied-max-num-seq.yaml  Meta-Llama-3.1-8B-vllm-mutiplegpu.yaml  Meta-Llama-3.1-8B-vllm-singlegpu.yaml  NousResearch-Hermes-3-Llama-3.2-3B.yaml  NousResearch-Meta-Llama-3.1-8B.yaml  Qwen-Qwen3-235B-A22B.yaml  example_batch_run.yaml  meta-llama-Llama-3.3-70B-Instruct.yaml  meta-llama-Llama-4-Scout-17B-16E-Instruct.yaml  qwen-Qwen2.5-1.5B-Instruct.yaml
leaderboard/: app.py
server/: db_service.py  server.py
src/: __init__.py
src/benchmarks/: __init__.py  backend_request_func.py  benchmark_dataset.py  benchmark_runner.py  benchmark_serving.py  benchmark_utils.py
src/cli/: __init__.py  commands.py
src/engines/: __init__.py  base_engine.py  engine_manager.py  sglang_engine.py  tensorrt_engine.py  vllm_engine.py
src/utils/: __init__.py  data_service.py  docker_utils.py  gpu_cost_utils.py  upload_leaderboard.py  utils.py
src/wrappers/: __init__.py  cohere.py  fireworks.py  together.py
(+66 files in other folders)
