[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-engine-arena"
version = "0.1.0"
description = "A framework for comparing performance of different LLM inference engines"
readme = "README.md"
authors = [
  {name = "Inference Engine Arena Team", email = "xiaokunchen0@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# dependencies will be dynamically loaded from requirements.txt
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
]

[project.scripts]
arena = "src.cli.commands:main"

[project.urls]
Homepage = "https://github.com/Inference-Engine-Arena/inference-engine-arena"
Repository = "https://github.com/Inference-Engine-Arena/inference-engine-arena.git"
Documentation = "https://github.com/Inference-Engine-Arena/inference-engine-arena/docs"

[tool.setuptools]
packages = ["iearena"]
include-package-data = true

[tool.setuptools.package-dir]
"iearena" = "src"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.css", "*.html"]

[tool.setuptools.exclude-package-data]
"*" = ["*.git", "*.pyc", "__pycache__"]